// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/QuestionJudgement with correct 1`] = `
<div
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="makeStyles-clickable-263 makeStyles-root-261"
    onClick={[Function]}
  >
    <span
      className="makeStyles-root-264 makeStyles-root-265 "
    >
      一番
    </span>
    <div
      className="makeStyles-imageBox-262"
    >
      <div
        className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
        data-gatsby-image-wrapper=""
        style={
          Object {
            "backgroundColor": undefined,
            "display": "inline-block",
            "overflow": "hidden",
            "position": "relative",
            "width": "80%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "block",
              "maxWidth": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='undefined' width='undefined' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style={
              Object {
                "display": "block",
                "maxWidth": "100%",
                "position": "static",
              }
            }
          />
        </div>
        <div
          aria-hidden={true}
          data-placeholder-image=""
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        />
        <img
          alt="正解"
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="test-file-stub"
          decoding="async"
          loading="lazy"
          onLoad={[Function]}
          sizes="(max-width: 300px) 100vw, 200px"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transform": "translateZ(0)",
              "transition": "opacity 250ms linear",
              "width": "100%",
              "willChange": "opacity",
            }
          }
        />
        <noscript>
          <img
            alt="正解"
            data-gatsby-image-ssr=""
            data-main-image=""
            decoding="async"
            loading="lazy"
            onLoad={[Function]}
            sizes="(max-width: 300px) 100vw, 200px"
            src="test-file-stub"
            style={
              Object {
                "backgroundColor": undefined,
                "height": "100%",
                "left": 0,
                "objectFit": undefined,
                "objectPosition": undefined,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transform": "translateZ(0)",
                "transition": "opacity 250ms linear",
                "width": "100%",
                "willChange": "opacity",
              }
            }
          />
        </noscript>
        <script
          dangerouslySetInnerHTML={
            Object {
              "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t)e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\")),e.complete&&(e.style.opacity=1)}",
            }
          }
          type="module"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/QuestionJudgement with incorrect 1`] = `
<div
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="makeStyles-clickable-268 makeStyles-root-266"
    onClick={[Function]}
  >
    <span
      className="makeStyles-root-269 makeStyles-root-270 "
    >
      一番
    </span>
    <div
      className="makeStyles-imageBox-267"
    >
      <div
        className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
        data-gatsby-image-wrapper=""
        style={
          Object {
            "backgroundColor": undefined,
            "display": "inline-block",
            "overflow": "hidden",
            "position": "relative",
            "width": "80%",
          }
        }
      >
        <div
          style={
            Object {
              "display": "block",
              "maxWidth": undefined,
            }
          }
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg height='undefined' width='undefined' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
            style={
              Object {
                "display": "block",
                "maxWidth": "100%",
                "position": "static",
              }
            }
          />
        </div>
        <div
          aria-hidden={true}
          data-placeholder-image=""
          style={
            Object {
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        />
        <img
          alt="不正解"
          data-gatsby-image-ssr=""
          data-main-image=""
          data-src="test-file-stub"
          decoding="async"
          loading="lazy"
          onLoad={[Function]}
          sizes="(max-width: 300px) 100vw, 200px"
          style={
            Object {
              "backgroundColor": undefined,
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transform": "translateZ(0)",
              "transition": "opacity 250ms linear",
              "width": "100%",
              "willChange": "opacity",
            }
          }
        />
        <noscript>
          <img
            alt="不正解"
            data-gatsby-image-ssr=""
            data-main-image=""
            decoding="async"
            loading="lazy"
            onLoad={[Function]}
            sizes="(max-width: 300px) 100vw, 200px"
            src="test-file-stub"
            style={
              Object {
                "backgroundColor": undefined,
                "height": "100%",
                "left": 0,
                "objectFit": undefined,
                "objectPosition": undefined,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transform": "translateZ(0)",
                "transition": "opacity 250ms linear",
                "width": "100%",
                "willChange": "opacity",
              }
            }
          />
        </noscript>
        <script
          dangerouslySetInnerHTML={
            Object {
              "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t)e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\")),e.complete&&(e.style.opacity=1)}",
            }
          }
          type="module"
        />
      </div>
    </div>
  </div>
</div>
`;
